--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-
 version: "3.9"
 
 services:
@@ -25,7 +24,7 @@ services:
 
   web:
     build:
-      context: ./hackabaka-main/frontend
+      context: ./frontend
       dockerfile: ../docker/Dockerfile.web
     container_name: hackabaka-web
     ports:
