--- a/docker/Dockerfile.ingestor
+++ b/docker/Dockerfile.ingestor
@@ -1,13 +1,16 @@
-
 # Stream ingestor (Python)
 FROM python:3.11-slim
 WORKDIR /app
-RUN apt-get update && apt-get install -y --no-install-recommends     ca-certificates curl &&     rm -rf /var/lib/apt/lists/*
-COPY hackabaka-main/requirements.txt ./requirements.txt
-RUN pip install --no-cache-dir -r requirements.txt sseclient-py
-COPY hackabaka-main/sse_to_predict.py ./sse_to_predict.py
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    ca-certificates curl && \
+    rm -rf /var/lib/apt/lists/*
 
-# Env defaults (can be overridden via compose)
+COPY requirements.txt ./requirements.txt
+RUN pip install --no-cache-dir -r requirements.txt sseclient-py
+
+# Only what the ingestor needs
+COPY sse_to_predict.py ./sse_to_predict.py
+
 ENV API_KEY=CHANGE_ME \
     STREAM_URL=https://95.217.75.14:8443/stream \
     FLAG_URL=https://95.217.75.14:8443/api/flag \
