--- a/docker/Dockerfile.web
+++ b/docker/Dockerfile.web
@@ -1,5 +1,4 @@
-
-# Frontend (Next.js 14+)
+# Frontend (Next.js)
 FROM node:20-alpine AS deps
 WORKDIR /app
 COPY package.json package-lock.json ./
@@ -14,7 +13,6 @@ RUN npm run build
 FROM node:20-alpine AS runner
 WORKDIR /app
 ENV NODE_ENV=production
-# Expose Next.js port
 EXPOSE 3000
-COPY --from=builder /app .
+COPY --from=builder /app ./
 CMD ["npm", "run", "start", "--", "-p", "3000"]
