--- a/.env.example
+++ b/.env.example
@@ -1,27 +1,12 @@
-# Hackathon Stream Configuration
+# API Authentication
 API_KEY=your_api_key_here
 
-# Hackathon API Endpoints
+# URLs Configuration
 STREAM_URL=https://95.217.75.14:8443/stream
 FLAG_URL=https://95.217.75.14:8443/api/flag
-
-# Local Backend Configuration
 LOCAL_PREDICT_URL=http://127.0.0.1:8000/predict?store=1
-
-# Frontend Configuration
-FRONTEND_POST_URL=http://localhost:3000/api/stream
-
-# SSL/TLS Configuration
-VERIFY_TLS=false
-
-# Connection Timeouts (in seconds)
-CONNECT_TIMEOUT=5
-READ_TIMEOUT=None
-REQ_TIMEOUT=10
+FRONTEND_POST_URL=https://hackabaka.vercel.app/api/stream
 
 # Processing Configuration
 MAX_WORKERS=4
 THRESHOLD=0.35
-
-# Debug
-PRINT_FEATURES=false
